--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 05:05:12 2018</p>
+         Last Run: Fri Jul 13 06:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>60</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>33</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>14</td>
                         <td>14</td>
                         <td>0</td>
-                        <td>52</td>
-                        <td>5</td>
+                        <td>51</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>28</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>27</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -84,7 +84,7 @@
                         <td>0</td>
                         <td>36</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
                         <td>19</td>
                      </tr>
@@ -202,7 +202,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "0",
                  "0",
                  "0",
@@ -215,7 +215,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "60",
-                 "52",
+                 "51",
                  "43",
                  "39",
                  "36"
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "28",
-                 "27",
-                 "13",
+                 "30",
+                 "25",
+                 "24",
+                 "12",
                  "19"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 05:05:12 2018</p>
+         Last Run: Fri Jul 13 06:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -293,14 +293,14 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
                         <td>40</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -310,9 +310,9 @@
                         <td>0</td>
                         <td>36</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>8</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -324,7 +324,7 @@
                         <td>7</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>40</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -372,7 +372,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -385,7 +385,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -466,9 +466,9 @@
                "data":[
                  "7",
                  "6",
-                 "6",
-                 "8",
-                 "40"
+                 "5",
+                 "5",
+                 "30"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 05:05:12 2018</p>
+         Last Run: Fri Jul 13 06:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -510,9 +510,9 @@
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -536,7 +536,7 @@
                         <td>0</td>
                         <td>32</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -656,7 +656,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "23",
+                 "24",
                  "26",
                  "32"
                ]
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 05:05:12 2018</p>
+         Last Run: Fri Jul 13 06:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -707,38 +707,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>3</td>
-                        <td>33</td>
+                        <td>27</td>
+                        <td>27</td>
+                        <td>0</td>
+                        <td>32</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>21</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>4</td>
-                        <td>39</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>0</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>32</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>33</td>
+                        <td>6</td>
                         <td>46</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>38</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -782,8 +782,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "27",
                  "26",
-                 "25",
                  "23"
                ]
              },
@@ -793,8 +793,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "27",
                  "26",
-                 "25",
                  "23"
                ]
              }
@@ -846,9 +846,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "4",
-                 "33"
+                 "0",
+                 "0",
+                 "6"
                ]
              },
              {
@@ -856,8 +856,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "33",
-                 "39",
+                 "32",
+                 "38",
                  "46"
                ]
              },
@@ -866,9 +866,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "32",
-                 "38"
+                 "26",
+                 "37",
+                 "42"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 05:05:12 2018</p>
+         Last Run: Fri Jul 13 06:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
