--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 07:05:23 2018</p>
+         Last Run: Fri Jul 13 08:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -47,7 +47,7 @@
                         <td>14</td>
                         <td>0</td>
                         <td>51</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
                         <td>25</td>
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 07:05:23 2018</p>
+         Last Run: Fri Jul 13 08:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -300,7 +300,7 @@
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -308,15 +308,15 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
@@ -324,7 +324,7 @@
                         <td>7</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -455,7 +455,7 @@
                  "51",
                  "45",
                  "40",
-                 "37",
+                 "36",
                  "34"
                ]
              },
@@ -466,9 +466,9 @@
                "data":[
                  "7",
                  "6",
-                 "4",
-                 "4",
-                 "29"
+                 "5",
+                 "5",
+                 "30"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 07:05:23 2018</p>
+         Last Run: Fri Jul 13 08:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 07:05:23 2018</p>
+         Last Run: Fri Jul 13 08:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -714,7 +714,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>28</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -731,8 +731,8 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>5</td>
                         <td>46</td>
                         <td>0</td>
@@ -784,7 +784,7 @@
                "data":[
                  "27",
                  "26",
-                 "23"
+                 "24"
                ]
              },
              {
@@ -795,7 +795,7 @@
                "data":[
                  "27",
                  "26",
-                 "23"
+                 "24"
                ]
              }
            ]
@@ -866,7 +866,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
+                 "29",
                  "41",
                  "46"
                ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 07:05:23 2018</p>
+         Last Run: Fri Jul 13 08:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -909,11 +909,11 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>24</td>
-                        <td>36</td>
+                        <td>22</td>
+                        <td>35</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>30</td>
                      </tr>
                      <tr>
@@ -924,9 +924,9 @@
                         <td>24</td>
                         <td>39</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ENE</td>
-                        <td>28</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -936,9 +936,9 @@
                         <td>24</td>
                         <td>45</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NE</td>
-                        <td>25</td>
+                        <td>26</td>
                      </tr>
                   </tbody>
                </table>
@@ -1046,7 +1046,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
+                 "22",
                  "24",
                  "24"
                ]
@@ -1056,7 +1056,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
+                 "35",
                  "39",
                  "45"
                ]
@@ -1067,8 +1067,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "30",
-                 "28",
-                 "25"
+                 "29",
+                 "26"
                ]
              }
            ]
