--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 13:05:23 2018</p>
+         Last Run: Fri Jul 13 14:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -58,7 +58,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -70,7 +70,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -216,8 +216,8 @@
                "data":[
                  "60",
                  "51",
-                 "42",
-                 "38",
+                 "43",
+                 "39",
                  "36"
                ]
              },
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 13:05:23 2018</p>
+         Last Run: Fri Jul 13 14:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -272,7 +272,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
@@ -286,7 +286,7 @@
                         <td>0</td>
                         <td>44</td>
                         <td>3</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
                         <td>3</td>
                      </tr>
@@ -296,7 +296,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -452,9 +452,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
+                 "50",
                  "44",
-                 "40",
+                 "39",
                  "35",
                  "32"
                ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 13:05:23 2018</p>
+         Last Run: Fri Jul 13 14:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -512,7 +512,7 @@
                         <td>0</td>
                         <td>23</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -531,8 +531,8 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
                         <td>30</td>
                         <td>0</td>
@@ -584,7 +584,7 @@
                "data":[
                  "29",
                  "28",
-                 "26"
+                 "27"
                ]
              },
              {
@@ -595,7 +595,7 @@
                "data":[
                  "29",
                  "28",
-                 "26"
+                 "27"
                ]
              }
            ]
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 13:05:23 2018</p>
+         Last Run: Fri Jul 13 14:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -706,15 +706,15 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>Partly Cloudy</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>1</td>
-                        <td>31</td>
+                        <td>28</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>18</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -722,23 +722,23 @@
                         <td>26</td>
                         <td>26</td>
                         <td>1</td>
-                        <td>37</td>
+                        <td>34</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>E</td>
-                        <td>21</td>
+                        <td>14</td>
+                        <td>ENE</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
-                        <td>45</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>E</td>
-                        <td>28</td>
+                        <td>42</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>ENE</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -782,7 +782,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "27",
+                 "28",
                  "26",
                  "24"
                ]
@@ -793,7 +793,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "27",
+                 "28",
                  "26",
                  "24"
                ]
@@ -848,7 +848,7 @@
                "data":[
                  "1",
                  "1",
-                 "2"
+                 "0"
                ]
              },
              {
@@ -856,9 +856,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "37",
-                 "45"
+                 "28",
+                 "34",
+                 "42"
                ]
              },
              {
@@ -866,9 +866,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
-                 "21",
-                 "28"
+                 "31",
+                 "23",
+                 "23"
                ]
              }
            ]
@@ -885,7 +885,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 13 13:05:23 2018</p>
+         Last Run: Fri Jul 13 14:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -907,38 +907,38 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>20</td>
-                        <td>30</td>
+                        <td>27</td>
+                        <td>27</td>
+                        <td>13</td>
+                        <td>29</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>SW</td>
-                        <td>27</td>
+                        <td>W</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>22</td>
-                        <td>34</td>
-                        <td>1</td>
                         <td>13</td>
+                        <td>33</td>
+                        <td>1</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>26</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>22</td>
-                        <td>41</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>13</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNE</td>
-                        <td>25</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -982,9 +982,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "26",
+                 "27",
                  "25",
-                 "23"
+                 "24"
                ]
              },
              {
@@ -993,9 +993,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "26",
+                 "27",
                  "25",
-                 "23"
+                 "24"
                ]
              }
            ]
@@ -1046,9 +1046,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "20",
-                 "22",
-                 "22"
+                 "13",
+                 "13",
+                 "13"
                ]
              },
              {
@@ -1056,9 +1056,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "34",
-                 "41"
+                 "29",
+                 "33",
+                 "39"
                ]
              },
              {
@@ -1066,9 +1066,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "26",
-                 "25"
+                 "24",
+                 "23",
+                 "22"
                ]
              }
            ]
